Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
None
Description
I think this is a newly introduced race condition but that is admittedly based on a hunch. Quite a few nightly tests failed.
https://github.com/ursacomputing/crossbow/runs/7350280352?check_suite_focus=true
https://github.com/ursacomputing/crossbow/runs/7350302360?check_suite_focus=true
Attachments
Issue Links
- is duplicated by
-
ARROW-17103 [C++][CI] arrow-dataset-scanner-test has been failing on some nightly cpp builds
- Closed
- supercedes
-
ARROW-17127 [C++] Sporadic crash in arrow-dataset-scanner-test (1)
- Closed
-
ARROW-17126 [C++] Remove FutureWaiter
- Closed
- links to