cpp/src/arrow/compute/exec/exec_plan.cc
@@ -74,7 +74,15 @@ struct ExecPlanImpl : public ExecPlan {
     return nodes_.back().get();
   }
 
-  Status AddFuture(Future<> fut) { return task_group_.AddTaskIfNotEnded(std::move(fut)); }
+  Result<util::optional<Future<>>> BeginExternalTask() {
+    Future<> completion_future = Future<>::Make();
+    ARROW_ASSIGN_OR_RAISE(bool task_added,
+                          task_group_.AddTaskIfNotEnded(completion_future));
+    if (task_added) {
+      return std::move(completion_future);
+    }
+    return util::nullopt;
+  }
 
   Status ScheduleTask(std::function<Status()> fn) {
     auto executor = exec_context_->executor();
@@ -355,9 +363,10 @@ const ExecPlan::NodeVector& ExecPlan::sinks() const { return ToDerived(this)->si
 size_t ExecPlan::GetThreadIndex() { return ToDerived(this)->GetThreadIndex(); }
 size_t ExecPlan::max_concurrency() const { return ToDerived(this)->max_concurrency(); }
 
-Status ExecPlan::AddFuture(Future<> fut) {
-  return ToDerived(this)->AddFuture(std::move(fut));
+Result<util::optional<Future<>>> ExecPlan::BeginExternalTask() {
+  return ToDerived(this)->BeginExternalTask();
 }
+
 Status ExecPlan::ScheduleTask(std::function<Status()> fn) {
   return ToDerived(this)->ScheduleTask(std::move(fn));
 }
