cpp/src/arrow/util/async_util.cc
@@ -105,15 +105,16 @@ Status AsyncTaskGroup::AddTask(const Future<>& task_fut) {
   return AddTaskUnlocked(task_fut, std::move(guard));
 }
 
-Status AsyncTaskGroup::AddTaskIfNotEnded(const Future<>& task_fut) {
+Result<bool> AsyncTaskGroup::AddTaskIfNotEnded(const Future<>& task_fut) {
   auto guard = mutex_.Lock();
   if (finished_adding_) {
-    return Status::OK();
+    return false;
   }
   if (!err_.ok()) {
     return err_;
   }
-  return AddTaskUnlocked(task_fut, std::move(guard));
+  ARROW_RETURN_NOT_OK(AddTaskUnlocked(task_fut, std::move(guard)));
+  return true;
 }
 
 Future<> AsyncTaskGroup::End() {
